--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,8 +1,8 @@
 body
 {
-  color: deeppink;
+  color: #333;
   text-align: center;
-  font-family: "Arial";
+  font-family: Courier;
   font-size: 17px;
   margin: 0;
   padding: 0;
